--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Document</title>
+    <title>Productly | Design Agency</title>
 </head>
 <body>
     <section class="nav-bar">
