--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="nav-bar">
-        <img class="logo" src="images/logo.svg">
+        <a class="logo-link" href="#hero"><img class="logo" src="images/logo.svg"></a>
         <span class="nav">
         <span><a href="#products">Products</a></span>
         <span><a href="#customers">Customers</a></span>
@@ -23,7 +23,7 @@
         </div>
     </section>
 
-    <section class="hero">
+    <section id="hero">
         <div class="hero-group">
             <h1 class="hero-heading">The Design Thinking Superpowers</h1>
             <p class="hero-text">Tools tutorials, design and innovation experts, all
@@ -157,7 +157,7 @@
     <section class="footer">
         <hr>
         <div class="footer-items">
-            <div class="foot-item"><img class="footer-logo" src="images/logo.svg"></div>
+            <div class="foot-item"><a class="logo-link" href="#hero"><img class="footer-logo" src="images/logo.svg"></a></div>
             <div class="foot-item">
                 <h3 class="links-head">Quick links</h3>
                 <ul class="links-ul">
