--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Productly | Design Agency</title>
 </head>
 <body>
-    <section class="nav-bar">
+    <nav class="nav-bar">
         <a class="logo-link" href="#hero"><img class="logo" src="images/logo.svg"></a>
-        <span class="nav">
+        <span class="nav-items">
         <span><a href="#products">Products</a></span>
         <span><a href="#customers">Customers</a></span>
         <span><a href="#pricing"> Pricing</a></span>
@@ -21,7 +21,7 @@
         <div class="hamburger">
             ☰
         </div>
-    </section>
+    </nav>
 
     <section id="hero">
         <div class="hero-group">
@@ -153,7 +153,7 @@
             </div>
         </div>
     </section>
-    
+
     <section class="footer">
         <hr>
         <div class="footer-items">
